welcome.lessons.welcome.array.island.Island.scala.error
island:12: error: type mismatch;
 found   : Unit
 required: Int
  if (num(x)>num(x-1)){
  ^